# strategix

./: .gitignore  .gitmodules  CMakeLists.txt  DIPLOM.sln  DIPLOM.workspace  DIPLOM.workspace.session  DIPLOM_wsp.mk  Nya.hpp  README  README.md
core/: CMakeLists.txt
core/api/: Strategix.h
core/cmake/: common.cmake
core/src/: ConfigurationBuilder.h  ConfigurationManager.cpp  ConfigurationManager.h  CoordStructs.cpp  CoordStructs.h  Enti.cpp  Enti.h  EntiInfo.h  EntiSlot.cpp  EntiSlot.h  Feature.h  FeatureAttack.cpp  FeatureAttack.h  FeatureCollect.cpp  FeatureCollect.h  FeatureHealth.cpp  FeatureHealth.h  FeatureInfo.h  FeatureMove.cpp  FeatureMove.h  Interfaces.h  Kernel.cpp  Kernel.h  KernelBase.cpp  KernelBase.h  KernelSlot.h  Map.h  MapFull.cpp  MapFull.h  MapLocal.cpp  MapLocal.h  MapResource.h  MapsPath.h  MapsPathsFinder.cpp  MapsPathsFinder.h  Mine.h  Player.cpp  Player.h  PlayerSlot.cpp  PlayerSlot.h  (+14 more)
core/src/common/: ConfigurationManager.cpp  ConfigurationManager.h  CoordStructs.cpp  Resource.h  Resources.h  StrategixCommon.h  Strategix_Forward.h  TechTree.cpp  TechTree.h
core/src/entity/: Enti.cpp  Enti.h  EntiInfo.h  EntiSlot.cpp  EntiSlot.h  Entity.cpp  Entity.hpp  EntityKernel.cpp  EntityKernel.hpp  EntitySlot.cpp  Feature.hpp  FeatureAttack.cpp  FeatureAttack.hpp  FeatureCollect.cpp  FeatureCollect.hpp  FeatureHealth.cpp  FeatureHealth.hpp  FeatureMove.cpp  FeatureMove.hpp
core/src/feature/: Feature.h  FeatureAttack.cpp  FeatureAttack.h  FeatureCollect.cpp  FeatureCollect.h  FeatureHealth.cpp  FeatureHealth.h  FeatureInfo.h  FeatureMove.cpp  FeatureMove.h
core/src/game/: Game.cpp  Game.hpp  GameKernel.cpp  GameKernel.hpp  GameSlot.cpp  Player.cpp  Player.hpp  PlayerKernel.cpp  PlayerKernel.hpp  PlayerSlot.cpp
core/src/kernel/: ConfigManager.cpp  ConfigManager.h  ConfigManager.hpp  Kernel.cpp  Kernel.h  MapManager.cpp  MapManager.h  Message.cpp  Serialization.hpp  TechTree.cpp  User.cpp
core/src/map/: BaseMap.h  CoordStructs.cpp  Map.cpp  Map.h  MapFull.cpp  MapFull.h  MapLocal.cpp  MapManager.cpp  MapManager.h  MapMine.cpp  MapPath.hpp  MapsPath.h  MapsPathsFinder.cpp  MapsPathsFinder.h  Mine.cpp  Mine.h  PathFinder.cpp  PathFinder.hpp
core/src/network/: Client.cpp  Client.hpp  Connection.cpp  Connection.hpp  Server.cpp  Server.hpp
core/src/player/: Player.cpp  Player.h  PlayerSlot.cpp  PlayerSlot.h
core/src/strx/common/: CoordStructs.cpp  CoordStructs.h  EntityInfo.h  Resource.h  Resources.h  StrategixCommon.h  Strategix_Forward.h  TechTree.cpp  TechTree.h
core/src/strx/entity/: Enti.cpp  Enti.h  EntiInfo.h  EntiSlot.cpp  EntiSlot.h  Entity.cpp  Entity.h  EntitySlot.cpp  EntitySlot.h
core/src/strx/feature/: Feature.h  FeatureAttack.cpp  FeatureAttack.h  FeatureCollect.cpp  FeatureCollect.h  FeatureHealth.cpp  FeatureHealth.h  FeatureInfo.h  FeatureMove.cpp  FeatureMove.h  Interfaces.h
core/src/strx/game/: Game.cpp  Game.h  GameSlot.cpp  GameSlot.h
core/src/strx/kernel/: ConfigManager.cpp  ConfigManager.h  Game.cpp  Game.h  GameSlot.cpp  GameSlot.h  Kernel.cpp  Kernel.h  KernelSlot.cpp  KernelSlot.h  MapManager.cpp  MapManager.h  Message.cpp  Message.h  Serialization.h
core/src/strx/map/: BaseMap.cpp  BaseMap.h  Map.cpp  Map.h  MapMine.cpp  MapMine.h  MapObject.h  MapPath.h  MapPathFinder.cpp  MapPathFinder.h  MapsPath.h  MapsPathsFinder.cpp  MapsPathsFinder.h  (+4 more)
core/strx/: CoordStructs.hpp  Entity.hpp  EntityInfo.hpp  EntitySlot.hpp  FeatureInfo.hpp  Game.hpp  GameSlot.hpp  Kernel.hpp  Map.hpp  MapMine.hpp  MapObject.hpp  Message.hpp  NetworkCommon.hpp  Player.hpp  PlayerSlot.hpp  Resource.hpp  Resources.hpp  TechTree.hpp  User.hpp  strx.hpp  strx_common.hpp  strx_fwd.hpp
map_editor/: CMakeLists.txt
map_editor/config/map/: objects.def  terrains.def
map_editor/map_info/: GameWidget.cpp  GameWidget.h  GameWidget.hpp  MapAreaWidget.cpp  MapAreaWidget.h  MapInfo.cpp  MapInfo.h  MapInfo.hpp  MapInfo_Forward.h  MapInfo_fwd.h  MapInfo_fwd.hpp  MapWidget.cpp  MapWidget.h  MapWidget.hpp
map_editor/src/: Common.cpp  Common.h  EditorGameWidget.cpp  EditorGameWidget.h  EditorGameWidget.hpp  EditorMapWidget.cpp  EditorMapWidget.h  EditorMapWidget.hpp  MapArea.cpp  MapArea.h  MapInfo.cpp  MapInfo.h  main.cpp
map_editor/src/forms/: DialogNew.cpp  DialogNew.h  DialogNew.hpp  DialogNew.ui  MainForm.cpp  MainForm.h  MainForm.hpp  MainForm.ui  MapAreaWidget.cpp  MapAreaWidget.h  MapForm.cpp  MapForm.hpp  MapForm.ui
sample1/: CMakeLists.txt
sample1/config/: strategix.json
sample1/config/Races/: Spher.xml
sample1/maps/: 1x1.map  Little.map  small.map  terrains.def
sample1/src/: AiPlayerSlot.cpp  AiPlayerSlot.h  ConfigurationBuilderFromXml.cpp  ConfigurationBuilderFromXml.h  DefaultKernelSlot.cpp  DefaultKernelSlot.h  DefaultPlayerSlot.cpp  DefaultPlayerSlot.h  EntiInfoMesh.h  FrameListenerKernelSlot.cpp  FrameListenerKernelSlot.h  Main.cpp  ResourceInfoMesh.h  Sample1_Forward.h  SampleEntiSlot.cpp  SampleEntiSlot.h  SampleGame.cpp  SampleGame.h  SampleKernelSlot.cpp  SampleKernelSlot.h  SamplePlayerSlot.cpp  SamplePlayerSlot.h  Sample_Forward.h  Sample_fwd.h  Sample_fwd.hpp  TechTreesBuilderFromXml.cpp  TechTreesBuilderFromXml.h  main.cpp  sample1_fwd.hpp
sample1/src/graphics/: GameWidget.cpp  GameWidget.h  SampleGameWidget.cpp  SampleGameWidget.h  SampleGameWidget.hpp  SampleMapWidget.cpp  SampleMapWidget.h  SampleMapWidget.hpp
sample1/src/logic/: SampleEntity.cpp  SampleEntity.hpp  SampleGame.cpp  SampleGame.hpp  SamplePlayer.cpp  SamplePlayer.hpp  SampleUser.cpp  SampleUser.hpp
sample1/src/slots/: SampleEntiSlot.cpp  SampleEntiSlot.h  SampleEntity.cpp  SampleEntity.h  SampleEntity.hpp  SampleEntitySlot.cpp  SampleEntitySlot.h  SampleGame.cpp  SampleGame.h  SampleGame.hpp  SampleKernelSlot.cpp  SamplePlayer.cpp  SamplePlayer.h  SamplePlayer.hpp  SamplePlayerSlot.cpp  SamplePlayerSlot.h
sample1/src/ui/: MainWidget.cpp  MainWidget.hpp  MainWidget.ui  SampleGameWidget.cpp  SampleGameWidget.hpp  SampleMapWidget.hpp
server/: CMakeLists.txt
server/config/: log.conf  strategix.json
server/maps/: duel.map
server/src/: main.cpp
(+344 files in other folders)
